Bug 157789 - Comment size wrong behavior when zooming document
Summary: Comment size wrong behavior when zooming document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Apple, because, Libre, of, Office, opening, problem, Writer-Comments
  Show dependency treegraph
 
Reported: 2023-10-15 18:07 UTC by RGB
Modified: 2023-11-16 16:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen-cast presenting the problem (1.34 MB, video/mp4)
2023-10-15 18:07 UTC, RGB
Details
Sample file to test. (28.19 KB, application/vnd.oasis.opendocument.text)
2023-10-16 01:29 UTC, m_a_riosv
Details
video testing the bug (8.40 MB, video/mp4)
2023-11-16 16:12 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description RGB 2023-10-15 18:07:00 UTC
Created attachment 190228 [details]
Screen-cast presenting the problem

If you have an long comment on a Writer document and zoom in, the text in the comment gets "cut-off" because the comment box does not grow accordingly. 

The attached screen-cast starts with a high zoom and then reduce it, showing how text "appears".

This behavior is not present on previous LibreOffice versions and it wasn't there on the first alphas, so it's a recent change.

Tested with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 489da34e9bffb234fa27155cef1931bd6f21dc1d
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

Also happens with gtk3 UI.
Comment 1 m_a_riosv 2023-10-16 01:29:31 UTC
Coonfirmed
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9eb419b0b0f019f5fbc48ff1a11977e8b041edee
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

Works fine for me with
Version: 7.5.8.1 (X86_64) / LibreOffice Community
Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: f5defcebd022c5bc36bbb79be232cb6926d8f674
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 2 m_a_riosv 2023-10-16 01:29:56 UTC
Created attachment 190231 [details]
Sample file to test.
Comment 3 BogdanB 2023-10-16 16:54:14 UTC
I'm getting this

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-06-13 10:11:08 +0200
committer	Caolán McNamara <caolan.mcnamara@collabora.com>	2023-06-13 17:11:45 +0200
commit 8d18b5af883bb6b56e758801ee730a08bb88a8f5 (patch)
tree ea230e36ac2af38ae0a75660e1bec4bd86197e58
parent 0ea5dde060df7ef638fbd1f2efe6aa221033e69c (diff)
speed up rendering annotatins, cache meta height
shaves 2% off scrolling profile on a large word doc

Change-Id: I283e3f99c1c385f3d20ea573d15ca59b4629c14d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152978
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>

It is possible to be connected to comments?
Comment 4 Commit Notification 2023-11-16 10:53:08 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/60f001962122a77863231e9cf5dc445c136aac43

tdf#157789 Comment size wrong behavior when zooming document

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2023-11-16 16:12:11 UTC
Created attachment 190877 [details]
video testing the bug

Seems much better. It's worse when the page is less than 60%, but maybe is normal (the text is very small on my computer).
Lenovo IdeaCentre AIO 3 24ALC6
AMD® Ryzen 7 5700u with radeon graphics × 16
RENOIR (renoir, LLVM 15.0.7, DRM 3.49, 6.2.0-36-generic)
1920*1080

See screencast on the latest master build recently.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 17eaebee279772b6062ae3448012133897fc71bb
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded