tdf#157789 Comment size wrong behavior when zooming document

Revert
    commit 8d18b5af883bb6b56e758801ee730a08bb88a8f5
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Jun 13 10:11:08 2023 +0200
    speed up rendering annotatins, cache meta height

Change-Id: Ib0bae3fd9020200d09c5b37baf5ae882c8532e58
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159496
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>